k8s-security-framework/policies/resource-governance/KSP-RES-004/tests/exception-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-res-004-exception
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
