k8s-security-framework/policies/resource-governance/KSP-RES-004/tests/positive-two-containers-with-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-res-004-positive-two-resource
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
      resources:
        limits:
          memory: 512Mi
    - name: sidecar
      image: harbor.example.com/demo-api:1.0.0
      resources:
        limits:
          memory: 512Mi
